--- a/predict.ipynb
+++ b/predict.ipynb
@@ -13,7 +13,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "import pickle\n",
-    "from sklearn.linear_model._base import _preprocess_data",
+    "from sklearn.linear_model._base import _preprocess_data\n",
     "from datetime import datetime\n",
     "from sklearn.linear_model import Lasso\n",
     "from sklearn.linear_model import Ridge\n",
